fixed a few buttons, made h1 visible.  Need to get image color on pageyoffset working

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,13 @@ a:visited,
 a:active {
   text-decoration: none; }
 
+h1 {
+  font-size: 5em;
+  background: #0B0B0B;
+  padding: 20px 0;
+  opacity: 0.6;
+  border-radius: 20px; }
+
 h2.section-title {
   font-size: 2.2em;
   margin: 50px 0 35px 0; }
@@ -36,6 +43,10 @@ h2.section-title {
   .intro-pic {
     float: left;
     margin-right: 15px; } }
+.intro-description {
+  font-size: 1.4em;
+  line-height: 1.5em; }
+
 /* Skills */
 .table > tbody > tr > td.tablefix {
   border-bottom: 1px solid #ddd; }
@@ -155,7 +166,7 @@ h2.section-title {
 .bucks-map {
   width: 50%;
   height: 300px;
-  margin-bottom: 30px; }
+  margin-bottom: 40px; }
 
 .contact-items {
   font-size: 1.4em; }
@@ -186,6 +197,6 @@ header {
 footer {
   height: 120px;
   background: url("../img/congruent_outline.png");
-  opacity: 0.15; }
+  opacity: 0.25; }
 
 /*# sourceMappingURL=style.css.map */
