--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -14,6 +14,14 @@ a:active{
 	text-decoration: none;
 }
 
+h1{
+	font-size: 5em;
+	background: $dark-back;
+	padding: 20px 0;
+	opacity: 0.6;
+	border-radius: 20px;
+}
+
 h2.section-title{
 	font-size: 2.2em;
 	margin: 50px 0 35px 0;
