--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -2,5 +2,5 @@
 footer{
 	height: 120px;
 	background: url('../img/congruent_outline.png');
-	opacity: 0.15;
+	opacity: 0.25;
 }
