--- a/scss/modules/_sections.scss
+++ b/scss/modules/_sections.scss
@@ -17,6 +17,11 @@
 	}
 }
 
+.intro-description{
+	font-size: 1.4em;
+	line-height: 1.5em;
+}
+
 /* Skills */
 .table>tbody>tr>td.tablefix{
 	border-bottom: 1px solid #ddd;
@@ -164,7 +169,7 @@
 .bucks-map{
 	width: 50%;
 	height: 300px;
-	margin-bottom: 30px;
+	margin-bottom: 40px;
 }
 
 .contact-items{
